--- a/src/app/components/accounts/accounts.component.html
+++ b/src/app/components/accounts/accounts.component.html
@@ -31,7 +31,7 @@
                 <tbody>
                   <tr *ngFor="let op of accountDetails.accountOperationDTOS">
                     <td>{{op.id}}</td>
-                    <td>{{op.operationDate | date : 'dd/MM/YYYY'}}</td>
+                    <td>{{op.operationDate | date : 'dd/MM/YYYY - HH:mm'}}</td>
                     <td>{{op.type}}</td>
                     <td class="text-end">{{op.amount | number : '1.2-2'}}</td>
                   </tr>
@@ -47,7 +47,40 @@
       </div>
     </div>
     <div class="col col-md-6">
-
+      <div class="card" *ngIf="account$">
+        <div class="card-header">Operations</div>
+        <div class="card-body">
+          <form [formGroup]="operationFormGroup" (ngSubmit)="handleAccountOperation()" method="post">
+            <div class="form-check form-check-inline">
+              <input id="debit" class="form-check-input" type="radio" formControlName="operationType" value="DEBIT">
+              <label for="debit" class="form-check-label">Debit</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input id="credit" class="form-check-input"  type="radio" formControlName="operationType" value="CREDIT">
+              <label for="credit" class="form-check-label">Credit</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input id="transfert" class="form-check-input"  type="radio" formControlName="operationType" value="TRANSFERT">
+              <label for="transfert" class="form-check-label">Transfert</label>
+            </div>
+            <div class="mb-3" *ngIf="operationFormGroup.value.operationType=='TRANSFERT'">
+              <label class="form-label">Account Destination :</label>
+              <input type="text" formControlName="accountDestination" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Amount :</label>
+              <input type="text" formControlName="amount" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Description :</label>
+              <input type="text" formControlName="description" class="form-control">
+            </div>
+            <div class="d-grid mt-3">
+              <button class="btn btn-primary">Save Operation</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
